# GLTexture

./: CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.h  CreateSphere.cpp  Initiation.cpp  Input.cpp  Light.cpp  MVP.cpp  Material.cpp  Mesh.cpp  Model.cpp  MoveFunc.cpp  Shader.cpp  Texture.cpp  VertexData.cpp  _Texture.cpp  glad.c  lodepng.cpp  lodepng.h  main.cpp
header/: Light.h  MVP.h  Material.h  Mesh.h  Model.h  OBJ_Loader.h  Shader.h  Texture.h  _Texture.h  constants.h  mainheader.h
include/glad/: glad.h
shaders/: 4.fShaderMultipleLights.glsl  4.vShaderMultipleLights.glsl  5.fShaderWithMesh.glsl  fLightSourceShader.glsl
